--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
+
 .set {
-	background: "gray"
+	padding: 3px;
+	background: gray;
+	border-style: solid;
+}
+
+.name {
+	margin: 3px;
+	padding: 3px;
+	background: orange;
+}
+
+.cost {
+	margin: 1px;
+	color: white;
+}
+
+.item{
+	text-align: center;
+	background: #202020;
+	float: left;
+	border-style: solid;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.imglist{
+	display: flex;
+	padding-left: 10px;
 }
