--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 * {
 	margin: 0;
 	padding: 0;
+	
 }
 
+body{
+	background: #333;
+}
 
 .set {
 	padding: 3px;
-	background: gray;
-	border-style: solid;
+	background: #333;
+	border-bottom-style: solid;
+	display: block;
+	
 }
 
 .name {
@@ -32,5 +38,18 @@
 
 .imglist{
 	display: flex;
-	padding-left: 10px;
+	
+}
+button{
+	background: none;
+	border-style: none;
+	display: block;
+}
+.collapsible{
+	
+	color: #aaa;
+}
+.wiki{
+	color: lightblue;
+	
 }
